PIP-289 Java 17 upgrade and fix warnings